<resources>
    <string name="app_name">InventarioMonas</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_productos">Productos</string>

    <string name="tv_titulo">Título</string>
    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_email">Correo electrónico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>
    
    <string name="txt_registro">Registro</string>
    <string name="et_nombres">Nombres</string>
    <string name="et_r_password">Repita la contraseña</string>
    <string name="btn_resgistrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>