<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroEmailActivity">

    <TextView
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<ImageView
    android:src="@drawable/seguidores"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="15dp"/>
    <!--nombres-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_nombres"
            android:hint="@string/et_nombres"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Correo-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_email"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <!--Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <!--Repetir Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_r_password"
            android:hint="@string/et_r_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrar"
        android:text="@string/btn_resgistrar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>